--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/kokoro.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/nikukyu.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
+   
 </head>
 <body>
   <app-root>Loading...</app-root>
